# sourcebase

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/: app-flow-document.mdc  implementation-plan.mdc  project-requirements-document.mdc  tech-stack-document.mdc
backend/: run.py
backend/src/: __init__.py  config.py  interfaces.py  models.py
backend/src/api/: __init__.py  wsgi.py
backend/src/api/routes/: chat.py  documents.py
backend/src/implementations/: __init__.py  sqlite_metadata_store.py
backend/src/interfaces/: llm.py
backend/src/services/: document_service.py
backend/tests/: __init__.py  conftest.py  test_core.py  test_document_service.py  test_interfaces_with_mocks.py  test_models.py
backend/tests/implementations/: test_sqlite_metadata_store.py
backend/tests/mocks/: store_mocks.py
src/api/routes/: search.py
src/interfaces/: vector_db.py
src/services/: document_service.py
tests/: conftest.py  test_document_service.py
